<resources>
    <string name="app_name">ClientApp</string>

    <string name="welcome">Добро пожаловать</string>
    <string name="come_in">Войти</string>

    <string name="update">Обновить ПО</string>
    <string name="settings">Настройки</string>
    <string name="logs">Логи</string>
    <string name="favorite">Избранное</string>

    <string name="server_address_summary">Задайте адрес сервера</string>
    <string name="server_address_title">Адрес сервера</string>
    <string name="server_port_summary">Задайте порт сервера</string>
    <string name="server_port_title">Порт сервера</string>

    <string name="date">Дата</string>
    <string name="day_temp">Температура днем</string>
    <string name="min_temp">Минимальная температура за сутки</string>
    <string name="max_temp">Максимальная температура за сутки</string>
    <string name="morn_temp">Температура утром</string>
    <string name="eve_temp">Температура вечером</string>
    <string name="night_temp">Температура ночью</string>
    <string name="pressure">Атмосферное давление</string>
    <string name="humidity">Влажность воздуха</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
